# devngn.ai

./: .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: DEVOPS.md
.github/workflows/: app-release.yml  translate.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
apps/api/: package.json
apps/app/: .gitignore  nuxt.config.test.ts  nuxt.config.ts  package.json  playwright.config.ts  vitest.config.ts
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/capabilities/: default.json
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/scripts/: setup-windows-signing.ps1  windows-sign.ps1
apps/app/src-tauri/src/: lib.rs  main.rs
apps/comms-apphost/: .gitignore  apphost.mts  apphost.ts  aspire.config.json  package.json
apps/site/: .env.example  .gitignore  astro.config.mjs  netlify.toml  package.json  playwright.config.ts  tsconfig.json
apps/vscode/: package.json  tsconfig.json  tsup.config.ts
services/: Devngn.slnx  Directory.Build.props  Directory.Packages.props
services/Devngn.ServiceDefaults/: Devngn.ServiceDefaults.csproj  Extensions.cs
services/Devngn.ServiceDefaults.Tests/: Devngn.ServiceDefaults.Tests.csproj  ServiceDefaultsExtensionsTests.cs
services/Devngn.Wellness.Api/: Program.cs  (+2 more)
services/Devngn.Wellness.Api.Tests/: Devngn.Wellness.Api.Tests.csproj  FixedTimeProvider.cs  OpenApiSnapshotTests.cs  WellnessApiSmokeTests.cs
(+374 files in other folders)
