[package]
name = "devngn"
version = "0.0.0"
description = "devngn: gamified, social wellness interruptions for developers"
authors = ["David Pine"]
license = "MIT"
repository = "https://github.com/IEvangelist/devngn.ai"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "devngn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The Tauri notification plugin only delivers click/activation callbacks on
# mobile, so on Windows we drive wellness-nudge toasts through the WinRT toast
# API directly to wire `on_activated` (focus the window + route the SPA).
[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"
